<resources>
    <string name="app_name">TipCalc</string>
    <string name="action_settings">Settings</string>
    <string name="total">Total</string>
    <string name="percentage_of_tip">% de propina</string>
    <string name="calculate">Calcular</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="delete_recently">Borrar recientes</string>
    <string name="about">Acerca de</string>


    <string name="global.message.tip">Propina %,.1f</string>
    <string name="tipdetail.message.bill">Total %,.1f</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
