<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.neslaram.tipcalc.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/inputBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/total"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/bttnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/inputBill"
        android:layout_toEndOf="@+id/inputBill"
        android:layout_toRightOf="@+id/inputBill"
        android:text="@string/calculate" />

    <EditText
        android:id="@+id/inputPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inputBill"
        android:ems="10"
        android:hint="@string/percentage_of_tip"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bttnCalculate"
        android:layout_toEndOf="@+id/inputPercentage"
        android:layout_toRightOf="@+id/inputPercentage"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/bttnIncrease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus_sign" />

        <Button
            android:id="@+id/bttnDecrease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus_sign" />
    </LinearLayout>

    <Button
        android:id="@+id/bttnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputPercentage"
        android:text="@string/delete_recently" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/bttnClear"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="?android:textAppearanceLarge"
        android:visibility="gone" />

</RelativeLayout>
